base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-odoo
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: odoo
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/name: odoo
    spec:
      
      serviceAccountName: my-release-odoo
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: odoo
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      containers:
        - name: my-release-odoo
          image: docker.io/bitnami/odoo:16.0.20230915-debian-11-r0
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 8069
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 600
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /web/health
              port: http
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /web/health
              port: http
          resources:
            limits: {}
            requests:
              cpu: 300m
              memory: 512Mi
          volumeMounts:
            - name: odoo-data
              mountPath: /bitnami/odoo
      volumes:
        - name: odoo-data
          persistentVolumeClaim:
            claimName: my-release-odoo
