base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-odoo
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: odoo
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      nodePort: null
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: odoo
